--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "TypeScript client for the Schwab API",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "bin": {
+    "schwab-generate-token": "./dist/cli/generate-token.js"
+  },
   "scripts": {
     "build": "tsc",
     "test": "jest",
